# code_examples

./: .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
notebooks/: cc_fraud_analysis.ipynb
src/code_examples/: benchmark_datasets.py  date_utils.py  reducing.py  run.py  utils.py  xgboost.py
src/code_examples/pipelines/: elastic_net_pipeline.py  lightgbm_pipeline.py  random_forest_pipeline.py  xgboost_pipeline.py
tests/: test_environment.py  test_placeholder.py  test_utils.py  test_xgboost_pipeline.py
